--- a/my-medusa-store/package.json
+++ b/my-medusa-store/package.json
@@ -30,10 +30,10 @@
     "@mikro-orm/knex": "6.4.3",
     "@mikro-orm/migrations": "6.4.3",
     "@mikro-orm/postgresql": "6.4.3",
+    "@react-email/components": "0.0.41",
     "awilix": "^8.0.1",
-    
-
-    "pg": "^8.13.0"
+    "pg": "^8.13.0",
+    "resend": "^4.5.1"
   },
   "devDependencies": {
     "@medusajs/test-utils": "2.5.0",
