--- a/my-medusa-store-storefront/package.json
+++ b/my-medusa-store-storefront/package.json
@@ -23,12 +23,13 @@
     "@stripe/stripe-js": "^1.29.0",
     "lodash": "^4.17.21",
     "lucide-react": "^0.479.0",
+    "motion": "^12.12.1",
     "next": "15.0.3",
     "pg": "^8.11.3",
     "qs": "^6.12.1",
-    "react": "19.0.0-rc-66855b96-20241106",
+    "react": "18.2.0",
     "react-country-flag": "^3.1.0",
-    "react-dom": "19.0.0-rc-66855b96-20241106",
+    "react-dom": "18.2.0",
     "server-only": "^0.0.1",
     "tailwindcss-radix": "^2.8.0",
     "webpack": "^5"
@@ -52,14 +53,5 @@
     "prettier": "^2.8.8",
     "tailwindcss": "^3.0.23",
     "typescript": "^5.3.2"
-  },
-  "packageManager": "yarn@3.2.3",
-  "resolutions": {
-    "@types/react": "npm:types-react@19.0.0-rc.1",
-    "@types/react-dom": "npm:types-react-dom@19.0.0-rc.1"
-  },
-  "overrides": {
-    "react": "19.0.0-rc-66855b96-20241106",
-    "react-dom": "19.0.0-rc-66855b96-20241106"
   }
 }
