feat: add Docker support with Dockerfile and docker-compose.yml; remove outdated README files

--- a/package.json
+++ b/package.json
@@ -13,6 +13,9 @@
     "medusa"
   ],
   "scripts": {
+  "docker:up": "docker compose up --build",
+  "docker:down": "docker compose down",
+
     "build": "medusa build",
     "seed": "medusa exec ./src/scripts/seed.ts",
     "start": "medusa start",
