feat: implement email notifications for order cancellation, delivery, and shipment; update Docker configuration and remove outdated order status update functionality

--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -1,24 +1,10 @@
 version: "3.8"
-
 services:
-  medusa-server:
+  medusa:
     build:
       context: .
       dockerfile: Dockerfile.prod
     env_file:
-      - .env
-    environment:
-      DISABLE_MEDUSA_ADMIN: "false"
-      MEDUSA_WORKER_MODE: "server"
+      - .env 
     ports:
       - "9000:9000"
-
-  medusa-worker:
-    build:
-      context: .
-      dockerfile: Dockerfile.prod
-    env_file:
-      - .env
-    environment:
-      DISABLE_MEDUSA_ADMIN: "true"
-      MEDUSA_WORKER_MODE: "worker"
